re PR middle-end/45874 (ICE in verify_flow_info failed)

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/45874
	* cgraphunit.c (cgraph_redirect_edge_call_stmt_to_callee):
	Fixup the CFG when EH was fixed up.

	* g++.dg/torture/pr45874.C: New testcase.

From-SVN: r165416